manifest/demoteam/public-app/prod/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: public-app
    env: prod
    team: demoteam
  name: public-app
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: public-app
        env: prod
    spec:
      securityContext: {}
      containers:
      - image: nginxinc/nginx-unprivileged:alpine3.22-perl
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '2'
            memory: 2Gi
        securityContext: {}
        ports:
        - containerPort: 8080
        name: main
  selector:
    matchLabels:
      team: demoteam
      app: public-app
      env: prod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: public-app
    env: prod
    team: demoteam
  name: public-app
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: public-app.prod.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: public-app
    env: prod
    team: demoteam
  name: public-app
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: public-app
    env: prod
    team: demoteam
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: public-app
    env: prod
    team: demoteam
  name: public-app-public
spec:
  ingressClassName: ingress-nginx-pm-public
  rules:
  - host: my-public-app.polarismedia.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
  - host: my-public-app.polarismedia.no
    http:
      paths:
      - path: /api/public
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
  - host: my-public-app.polarismedia.no
    http:
      paths:
      - path: /public/
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
      - path: /can/have
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
      - path: /multiple/paths
        backend:
          service:
            port:
              number: 80
            name: public-app
        pathType: Prefix
